--- a/main.tex
+++ b/main.tex
@@ -17,12 +17,16 @@
 
 \newcommand{\artdate}{2022年8月}
 \newcommand{\artauthor}{陈泱宇，李燕琴}
+\newcommand{\cpuname}{CDIM}
 \newcommand{\arttitle}{CDIM 决赛设计报告}
 \newcommand{\todo}{\textbf{\textcolor{red}{此部分尚需完善。}}}
 \newcommand{\hlrule}{\rule{\linewidth}{0.5mm}}
 \renewcommand{\maketitlehooka}{\null\mbox{}\vfill}
 \renewcommand{\maketitlehookd}{\vfill\null}
 
+\graphicspath{{img/}}
+
+% 页眉设置
 \pagestyle{fancy}
 \fancyhf{}
 \rhead{\thepage}
@@ -46,7 +50,7 @@
    
     \begin{figure}[h]
       \centering
-      \includegraphics[width=0.5\linewidth]{img/logo.png}
+      \includegraphics[width=0.5\linewidth]{logo.png}
     \end{figure}
    \vspace{0.5 cm}
   
