--- a/main.tex
+++ b/main.tex
@@ -18,14 +18,14 @@
 \newcommand{\artdate}{2022年8月}
 \newcommand{\artauthor}{陈泱宇，李燕琴}
 \newcommand{\cpuname}{CDIM}
-\newcommand{\arttitle}{CDIM 决赛设计报告}
+\newcommand{\arttitle}{\cpuname 决赛设计报告}
 \newcommand{\todo}{\textbf{\textcolor{red}{此部分尚需完善。}}}
 \newcommand{\hlrule}{\rule{\linewidth}{0.5mm}}
 \renewcommand{\maketitlehooka}{\null\mbox{}\vfill}
 \renewcommand{\maketitlehookd}{\vfill\null}
 
-\graphicspath{{img/}}
 
+\graphicspath{{img/}}
 % 页眉设置
 \pagestyle{fancy}
 \fancyhf{}
@@ -44,7 +44,7 @@
   
     \vspace{1.5 cm}
     \hlrule \\[0.4 cm]
-    { \huge \bfseries CDIM 项目}\\[0.4cm]
+    { \huge \bfseries \cpuname 项目}\\[0.4cm]
     { \huge \bfseries 决赛设计报告}\\
     \hlrule \\[1cm]
    
@@ -89,7 +89,7 @@
 
 
 \newpage
-\renewcommand{\bibname}{参考文献}
+\renewcommand{\bibname}{参考资料}
 \begin{thebibliography}{99}
 	\bibitem[1]{MIPS} MIPS® Architecture For Programmers I, II, III. Imagination Technologies LTD.  
   \bibitem[2]{HSport} 计算机组成与设计: 硬件/软件接口. David A.Patterson
