--- a/main.tex
+++ b/main.tex
@@ -80,10 +80,8 @@
 % 可以使用input（但是无法显示outline），或直接在正文写
 \input{introduction}
 \input{cpu}
-
-\chapter{仿真验证框架}
-\chapter{操作系统支持}
-\chapter{Soc设计}
+\input{difftest-framework}
+\input{os-support}
 % 做了就可以说
 
 
