--- a/cache.tex
+++ b/cache.tex
@@ -1,1 +1,12 @@
 \section{缓存设计}
+
+\cpuname 中，设计实现了指令Cache和数据Cache，且均为虚拟索引物理标签（VIPT）记录，二者的突发传输数量、大小、组相联数量均为可配置。其中数据Cache支持写缓冲，以减少写回的阻塞数量。
+
+\subsection{指令Cache}
+\todo
+\cpuname 指令Cache默认为二路组相联且一路4KB、一行2字64bit。
+
+
+\subsection{数据Cache}
+
+\todo 
