--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@
 % 可以使用input（但是无法显示outline），或直接在正文写
 \input{introduction}
 \input{cpu}
-
+\input{Cache}
 \chapter{仿真验证框架}
 \chapter{操作系统支持}
 \chapter{Soc设计}
@@ -93,6 +93,8 @@
 \begin{thebibliography}{99}
 	\bibitem[1]{MIPS} MIPS® Architecture For Programmers I, II, III. Imagination Technologies LTD.  
   \bibitem[2]{HSport} 计算机组成与设计: 硬件/软件接口. David A.Patterson
+  \bibitem[3]{Siris} Sirius 设计文档. 于海鑫，尹思维
+  \bibitem[4]{SelfCPU} 自己动手写 CPU. 雷思磊
 \end{thebibliography}
 
 
