--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,7 @@
 \chapter{概述}
 
 \section{项目背景}
-本项目依托于龙芯杯提供的FPGA实验平台、Soc工程环境以及基准测试程序，设计并实现了一个部分兼容 MIPS32 体系结构的小端序 CPU，名为CDIM（\textbf{C}QU \textbf{D}ual \textbf{I}ssue \textbf{M}achine），其能成功通过龙芯杯提供的功能测试、性能测试、系统测试，具有较完善的运算处理、AXI访问、异常处理、中断响应等功能，并能够运行u-boot引导程序、uCore操作系统和Linux操作系统等。
+本项目依托于龙芯杯提供的FPGA实验平台、Soc工程环境以及基准测试程序，设计并实现了一个部分兼容 MIPS32 体系结构的小端序 CPU，名为\cpuname（\textbf{C}QU \textbf{D}ual \textbf{I}ssue \textbf{M}achine），其能成功通过龙芯杯提供的功能测试、性能测试、系统测试，具有较完善的运算处理、AXI访问、异常处理、中断响应等功能，并能够运行u-boot引导程序、uCore操作系统和Linux操作系统等。
 
 \section{名词解释}
 本项目中可能用到的一些名词缩写及其解释如表\ref{table:abbreviation_definition}所示。
@@ -33,5 +33,5 @@
 \end{table}
 
 \section{项目概述}
-CDIM（\textbf{C}QU \textbf{D}ual \textbf{I}ssue \textbf{M}achine），采用对称双发射五级顺序流水线的设计，支持指令FIFO、分支预测、指令缓存和数据缓存等特殊单元，以提升系统性能。其中双发射，采用对称双发逻辑以充分保证双发率；五级顺序流水线由取指（Instruction Fetch）、译码（Instruction Decode）、执行（Excute）、访存（Memory access），写回（Write Back）五个阶段组成；指令FIFO可以隔离取指阶段和后续阶段，以实现高效取指的作用；指令缓存和数据缓存均采用二路组相联和突发传输的设计，单路均为4KB以匹配TLB页面要求，其中指令缓存一行为64bit以适应双发取指要求，数据缓存一行为32bit。\todo 此外，CDIM还支持U-Boot引导程序，并基于该引导程序，成功运行uCoreh和Linux操作系统。
+\cpuname（\textbf{C}QU \textbf{D}ual \textbf{I}ssue \textbf{M}achine），采用对称双发射五级顺序流水线的设计，支持指令FIFO、分支预测、指令缓存和数据缓存等特殊单元，以提升系统性能。其中双发射，采用对称双发逻辑以充分保证双发率；五级顺序流水线由取指（Instruction Fetch）、译码（Instruction Decode）、执行（Excute）、访存（Memory access），写回（Write Back）五个阶段组成；指令FIFO可以隔离取指阶段和后续阶段，以实现高效取指的作用；指令缓存和数据缓存均采用二路组相联和突发传输的设计，单路均为4KB以匹配TLB页面要求，其中指令缓存一行为64bit以适应双发取指要求，数据缓存一行为32bit。\todo 此外，\cpuname 还支持U-Boot引导程序，并基于该引导程序，成功运行uCoreh和Linux操作系统。
 % TODO: 系统运行这一段陈述
