--- a/cpu.tex
+++ b/cpu.tex
@@ -4,11 +4,12 @@
 
 % \begin{landscape} % 用于旋转页面
 \begin{figure}[h]
-	\centering
-	\includegraphics[width=\linewidth]{datapath.png}
-	\caption{数据通路设计图}
-	\label{img:datapath}
+    \centering
+    \includegraphics[width=\linewidth]{datapath.pdf}
+    \caption{数据通路设计图}
+    \label{img:datapath}
 \end{figure}
+% \end{landscape}
 
 
 \section{双发策略}
