--- a/introduction.tex
+++ b/introduction.tex
@@ -15,8 +15,6 @@
     \toprule
     \multicolumn{1}{c}{\textbf{名词缩写}} & \multicolumn{1}{c}{\textbf{全称}}                   & \multicolumn{1}{c}{\textbf{解释}} \\ 
     \midrule
-    MIPS                               & Microprocessor without Interlocked Pipeline Stages & 无内部互锁流水级的微处理器                \\
-    SOC                                & System On a Chip                                   & 片上系统                             \\
     MIPS                               & Microprocessor without Interlocked Pipeline Stages & 无内部互锁流水级的微处理器 \\
     SOC                                & System On a Chip                                   & 片上系统 \\
     CPU                                & Central Processing Unit                            & 中央处理器 \\
@@ -28,10 +26,11 @@
     RAW                                & Read After Write                                   & 写后读 \\
     WAW                                & Write After Write                                  & 写后写 \\
     WAR                                & Write After Read                                   & 读后写 \\
+    ASID                               & Address Space Identification                       & 地址空间标识 \\
     \bottomrule
     \end{tabular}
 \end{table}
 
 \section{项目概述}
-\cpuname（\textbf{C}QU \textbf{D}ual \textbf{I}ssue \textbf{M}achine），采用对称双发射五级顺序流水线的设计，支持指令FIFO、分支预测、指令缓存和数据缓存等特殊单元，以提升系统性能。其中双发射，采用对称双发逻辑以充分保证双发率；五级顺序流水线由取指（Instruction Fetch）、译码（Instruction Decode）、执行（Excute）、访存（Memory access），写回（Write Back）五个阶段组成；指令FIFO可以隔离取指阶段和后续阶段，以实现高效取指的作用；指令缓存和数据缓存均采用二路组相联和突发传输的设计，单路均为4KB以匹配TLB页面要求，其中指令缓存一行为64bit以适应双发取指要求，数据缓存一行为32bit。\todo 此外，\cpuname 还支持U-Boot引导程序，并基于该引导程序，成功运行uCoreh和Linux操作系统。
+\cpuname（\textbf{C}QU \textbf{D}ual \textbf{I}ssue \textbf{M}achine），采用对称双发射五级顺序流水线的设计，支持指令FIFO、分支预测、指令缓存和数据缓存等特殊单元，以提升系统性能。其中双发射，采用对称双发逻辑以充分保证双发率；五级顺序流水线由取指（Instruction Fetch）、译码（Instruction Decode）、执行（Excute）、访存（Memory access），写回（Write Back）五个阶段组成；指令FIFO可以隔离取指阶段和后续阶段，以实现高效取指的作用；指令缓存和数据缓存均采用二路组相联和突发传输的设计，单路均为4KB以匹配TLB页面要求，其中指令缓存一行为64bit以适应双发取指要求，数据缓存一行为32bit。\todo 此外，\cpuname 还支持U-Boot引导程序，并基于该引导程序，成功运行uCore和Linux操作系统。
 % TODO: 系统运行这一段陈述
