replace cache img and add megasoc ref

--- a/main.tex
+++ b/main.tex
@@ -94,6 +94,7 @@
   \bibitem[2]{HSport} 计算机组成与设计: 硬件/软件接口. David A.Patterson
   \bibitem[3]{Siris} Sirius 设计文档. 于海鑫，尹思维
   \bibitem[4]{SelfCPU} 自己动手写 CPU. 雷思磊
+  \bibitem[5]{MegaSoC} MegaSoC https://github.com/MegaSoC
 \end{thebibliography}
 
 
