--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,8 @@
 \newcommand{\artdate}{2022年8月}
 \newcommand{\artauthor}{陈泱宇，李燕琴}
 \newcommand{\cpuname}{CDIM}
-\newcommand{\arttitle}{\cpuname 决赛设计报告}
+\newcommand{\cpuurl}{https://github.com/Maxpicca-Li/CDIM/blob/cyy_vipt_test/}
+\newcommand{\arttitle}{CQU Dual Issue Machine 决赛设计报告}
 \newcommand{\todo}{\textbf{\textcolor{red}{此部分尚需完善。}}}
 \newcommand{\hlrule}{\rule{\linewidth}{0.5mm}}
 \renewcommand{\maketitlehooka}{\null\mbox{}\vfill}
@@ -83,6 +84,7 @@
 \input{Cache}
 \input{difftest-framework}
 \input{os-support}
+\input{appendix.tex}
 % 做了就可以说
 
 
@@ -94,7 +96,7 @@
   \bibitem[2]{HSport} 计算机组成与设计: 硬件/软件接口. David A.Patterson
   \bibitem[3]{Siris} Sirius 设计文档. 于海鑫，尹思维
   \bibitem[4]{SelfCPU} 自己动手写 CPU. 雷思磊
-  \bibitem[5]{MegaSoC} MegaSoC https://github.com/MegaSoC
+  \bibitem[5]{MegaSoC} MegaSoC \url{https://github.com/MegaSoC}
 \end{thebibliography}
 
 
